feat: Major refactoring, tests and logging
-
