# docs/openapi.yaml
@@ -149,28 +149,6 @@ info:
   version: 1.0.0
 openapi: 3.1.0
 paths:
-  /component/sync:
-    post:
-      operationId: metric_component_sync_post
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MetacontrollerRequest'
-        required: true
-      responses:
-        '200':
-          content:
-            application/json:
-              schema: {}
-          description: Successful Response
-        '422':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
-          description: Validation Error
-      summary: Metric
   /finalize:
     post:
       operationId: finalize_finalize_post
@@ -203,9 +181,16 @@ paths:
               schema: {}
           description: Successful Response
       summary: Health Check
-  /metric/sync:
+  /sync/{resource_type}:
     post:
-      operationId: metric_metric_sync_post
+      operationId: sync_resource_sync__resource_type__post
+      parameters:
+      - in: path
+        name: resource_type
+        required: true
+        schema:
+          title: Resource Type
+          type: string
       requestBody:
         content:
           application/json:
@@ -224,26 +209,4 @@ paths:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
-      summary: Metric
-  /scorecard/sync:
-    post:
-      operationId: metric_scorecard_sync_post
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MetacontrollerRequest'
-        required: true
-      responses:
-        '200':
-          content:
-            application/json:
-              schema: {}
-          description: Successful Response
-        '422':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
-          description: Validation Error
-      summary: Metric
+      summary: Sync Resource
